--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,8 +2,12 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
+			"@src/*": ["./src/*"],
 			"@styles/*": ["./src/styles/*"],
-			"@components/*": ["./src/components/*"]
+			"@components/*": ["./src/components/*"],
+			"@assets/*": ["./src/assets/*"],
+			"@hooks/*": ["./src/hooks/*"],
+			"@data/*": ["./src/data/*"]
 		}
 	}
 }
