--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "football-practice-manager",
+  "homepage": "https://mdrzal1886.github.io/football-practice-manager",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "react-app-rewired build",
+    "deploy": "gh-pages -d build",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -36,6 +39,7 @@
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.54.0",
     "typescript": "^4.7.4"
