--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "gh-pages": "^4.0.0",
     "react-app-rewired": "^2.2.1",
     "sass": "^1.54.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
